@@ -28,7 +28,6 @@ use Dist::Zilla::Plugin::MinimumPerl ();
 use Dist::Zilla::Plugin::OurPkgVersion 0.004 (); # TRIAL comment support
 use Dist::Zilla::Plugin::PodWeaver ();
 use Dist::Zilla::Plugin::ReadmeAnyFromPod 0.120051 ();
-use Dist::Zilla::Plugin::ReadmeFromPod ();
 use Dist::Zilla::Plugin::TaskWeaver 0.101620 ();
 use Dist::Zilla::Plugin::Test::Compile ();
 use Dist::Zilla::Plugin::Test::Perl::Critic ();
@@ -182,14 +181,14 @@ sub configure {
     ),
 
   # generated distribution files
-    'ReadmeFromPod',
-    'License',            # core
-    [ ReadmeAnyFromPod => { # generate in root for github, etc.
+    'ReadmeAnyFromPod',     # in build dir
+    [ ReadmeAnyFromPod => ReadmeInRoot => { # also generate in root for github, etc.
         type => 'pod',
         filename => 'README.pod',
         location => 'root',
       }
     ],
+    'License',            # core
 
   # generated t/ tests
     [ 'Test::Compile' => { fake_home => 1 } ],
